feat/added schema in tables files